; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/replication/extr_basebackup.c__tarWriteDir.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/replication/extr_basebackup.c__tarWriteDir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32 }

@S_IFDIR = common dso_local global i32 0, align 4
@pg_dir_create_mode = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, %struct.stat*, i32)* @_tarWriteDir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_tarWriteDir(i8* %0, i32 %1, %struct.stat* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.stat*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.stat* %2, %struct.stat** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.stat*, %struct.stat** %7, align 8
  %10 = getelementptr inbounds %struct.stat, %struct.stat* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @S_ISLNK(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %4
  %15 = load i32, i32* @S_IFDIR, align 4
  %16 = load i32, i32* @pg_dir_create_mode, align 4
  %17 = or i32 %15, %16
  %18 = load %struct.stat*, %struct.stat** %7, align 8
  %19 = getelementptr inbounds %struct.stat, %struct.stat* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  br label %20

20:                                               ; preds = %14, %4
  %21 = load i8*, i8** %5, align 8
  %22 = load i32, i32* %6, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i8, i8* %21, i64 %23
  %25 = getelementptr inbounds i8, i8* %24, i64 1
  %26 = load %struct.stat*, %struct.stat** %7, align 8
  %27 = load i32, i32* %8, align 4
  %28 = call i32 @_tarWriteHeader(i8* %25, i32* null, %struct.stat* %26, i32 %27)
  ret i32 %28
}

declare dso_local i64 @S_ISLNK(i32) #1

declare dso_local i32 @_tarWriteHeader(i8*, i32*, %struct.stat*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
